added fonts and sweetalert

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" href="./2998119-eco-ecology-friendly-nature-plant_99848.ico">
+  <link rel="stylesheet" href="./style.css">
   <title>فروشگاه گل و گیاه</title>
 </head>
 
